--- a/src/components/common/Header/components/SearchBar/SearchBar.module.scss
+++ b/src/components/common/Header/components/SearchBar/SearchBar.module.scss
@@ -1,6 +1,6 @@
 $media-query: 75rem;
 
-.wrapper {
+.label {
 	max-width: 14.25rem;
 	width: 100%;
 
@@ -27,7 +27,44 @@ $media-query: 75rem;
 	}
 }
 
-
 .icon {
 	cursor: pointer;
+}
+
+.wrapper {
+	position: fixed;
+	inset: 0px;
+	overflow-y: auto;
+}
+
+.container {
+	display: flex;
+	min-height: 100%;
+	align-items: center;
+	justify-content: center;
+	padding: 1rem;
+	text-align: center;
+}
+
+.panel {
+	@apply max-w-md transform shadow-xl transition-all;
+
+	width: 100%;
+	overflow: hidden;
+	border-radius: 1rem;
+	background: white;
+	padding: 24px;
+	text-align: left;
+	vertical-align: middle;
+}
+
+.modal-input {
+	@apply flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-sm shadow-sm transition-colors file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50;
+}
+
+
+.overlay {
+	position:fixed;
+	inset:0;
+	background-color: rgb(0 0 0 / 0.25);
 }
