--- a/src/components/common/Header/components/SearchBar/SearchBar.module.scss
+++ b/src/components/common/Header/components/SearchBar/SearchBar.module.scss
@@ -1,4 +1,4 @@
-$media-query: 75rem;
+@import '@/styles/variables.scss';
 
 .label {
 	max-width: 14.25rem;
@@ -8,7 +8,7 @@ $media-query: 75rem;
 	align-items: center;
 
 	border-bottom: solid 1px #a1a1a1;
-	@media screen and (max-width: $media-query) {
+	@media screen and (max-width: $screen-xs-max) {
 		border-bottom: none;
 		max-width: 1.5rem;
 	}
@@ -22,49 +22,11 @@ $media-query: 75rem;
 		color: #cbcbcb;
 	}
 
-	@media screen and (max-width: $media-query) {
+	@media screen and (max-width: $screen-xs-max) {
 		display: none;
 	}
 }
 
 .icon {
 	cursor: pointer;
-}
-
-.wrapper {
-	position: fixed;
-	inset: 0px;
-	overflow-y: auto;
-}
-
-.container {
-	display: flex;
-	min-height: 100%;
-	align-items: center;
-	justify-content: center;
-	padding: 1rem;
-	text-align: center;
-}
-
-.panel {
-	@apply max-w-md transform shadow-xl transition-all;
-
-	width: 100%;
-	overflow: hidden;
-	border-radius: 1rem;
-	background: white;
-	padding: 24px;
-	text-align: left;
-	vertical-align: middle;
-}
-
-.modal-input {
-	@apply flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-sm shadow-sm transition-colors file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50;
-}
-
-
-.overlay {
-	position:fixed;
-	inset:0;
-	background-color: rgb(0 0 0 / 0.25);
 }
