--- a/src/components/common/Header/components/SearchResults/SearchResults.module.scss
+++ b/src/components/common/Header/components/SearchResults/SearchResults.module.scss
@@ -1,3 +1,5 @@
+@import '@/styles/mixins.scss';
+
 .wrapper {
 	@apply rounded-md   shadow-md;
 
@@ -8,7 +10,16 @@
 	padding: 1rem;
 	top: 100%;
 	border: solid 1px var(--border);
-	margin-top: 1rem;
+	
+	@include screen-xs-min {
+		
+		margin-top: 1rem;
+	}
+
+	@include screen-xs-max {
+		margin: 0 0.5rem;
+		width: calc(100vw - 1rem);
+	}
 }
 
 .no-results {
