--- a/src/components/common/Header/components/SearchBar/SearchBar.module.scss
+++ b/src/components/common/Header/components/SearchBar/SearchBar.module.scss
@@ -1,4 +1,4 @@
-@import '@/styles/variables.scss';
+@import '@/styles/mixins.scss';
 
 .label {
 	max-width: 14.25rem;
@@ -8,9 +8,7 @@
 	align-items: center;
 
 	border-bottom: solid 1px #a1a1a1;
-	@media screen and (max-width: $screen-xs-max) {
-		border-bottom: none;
-		max-width: 1.5rem;
+	@include screen-xs-max {
 		display: none;
 	}
 }
