--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,25 +1,38 @@
 @import './variables.scss';
 
-@mixin adaptive-value($property, $startSize, $minSize, $type: 1) {
+@mixin adaptive-value(
+	$property,
+	$startSize,
+	$minSize,
+	$screen-min-size: 320,
+	$type: 1
+) {
 	$addSize: $startSize - $minSize;
 	@if $type == 1 {
 		#{$property}: $startSize + px;
 		@media (max-width: #{$maxWidthContainer + px}) {
 			#{$property}: calc(
 				#{$minSize + px} + #{$addSize} *
-					((100vw - 320px) / #{$maxWidthContainer - 320})
+					(
+						(100vw - #{$screen-min-size + px}) / #{$maxWidthContainer -
+							$screen-min-size}
+					)
 			);
 		}
 	} @else if $type == 2 {
 		#{$property}: $startSize + px;
 		@media (min-width: #{$maxWidthContainer + px}) {
 			#{$property}: calc(
-				#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320})
+				#{$minSize + px} + #{$addSize} *
+					((100vw - #{$screen-min-size + px}) / #{$maxWidth - $screen-min-size})
 			);
 		}
 	} @else {
 		#{$property}: calc(
-			#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320})
+			#{$minSize +
+				px} +
+				#{$addSize} *
+				((100vw - #{$screen-min-size + px}) / #{$maxWidth - $screen-min-size})
 		);
 	}
 }
@@ -35,8 +48,6 @@
 		@content;
 	}
 }
-
-
 
 @mixin screen-xs-max {
 	@media screen and (max-width: $screen-xs-max) {
