--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,10 +4,12 @@ $maxWidthContainer: 1282;
 $containerPadding: 16;
 $containerWidth: calc($maxWidthContainer + $containerPadding * 2);
 
+$screen-xl-min: 75rem; //1200px
+$screen-xl-max: calc(75rem - 0.02px);
 
-	$screen-lg-min: 75rem; //1024px
-	$screen-lg-max: calc(75rem - 0.02px);
+$screen-xs-max: calc(30rem - 0.02px); // 480px
+$screen-xs-min: 30rem;
 
 
-	$screen-xs-max: calc(30rem - 0.02px); // 480px
-	$screen-xs-min: 30rem;
+$screen-md-max: calc(48rem - 0.02px); 
+$screen-md-min: 48rem; // 768px
