--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -13,3 +13,7 @@ $screen-xs-min: 30rem;
 
 $screen-md-max: calc(48rem - 0.02px); 
 $screen-md-min: 48rem; // 768px
+
+
+$screen-lg-min: 64rem; // 1024px
+$screen-lg-max: calc(64rem - 0.02px);
