--- a/src/components/common/Title/Title.module.scss
+++ b/src/components/common/Title/Title.module.scss
@@ -1,5 +1,5 @@
 .title {
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-size: 48px;
   font-weight: 600;
   line-height: calc(59 / 48);
