--- a/src/components/common/Header/components/SearchResults/SearchResults.module.scss
+++ b/src/components/common/Header/components/SearchResults/SearchResults.module.scss
@@ -1,48 +1,48 @@
 @import '@/styles/mixins.scss';
 
 .wrapper {
-	@apply rounded-md   shadow-md;
+  @apply rounded-md   shadow-md;
 
-	position: absolute;
-	max-height: 12.5rem;
-	overflow: auto;
-	width: 100%;
-	padding: 1rem;
-	top: 100%;
-	border: solid 1px var(--border);
-	
-	@include screen-xs-min {
-		
-		margin-top: 1rem;
-	}
+  position: absolute;
+  max-height: 12.5rem;
+  overflow: auto;
+  z-index: 100;
+  width: 100%;
+  padding: 1rem;
+  top: 100%;
+  border: solid 1px var(--border);
+	background-color: white;
 
-	@include screen-xs-max {
-		margin: 0 0.5rem;
-		width: calc(100vw - 1rem);
-	}
+  @include screen-xs-min {
+    margin-top: 1rem;
+  }
+
+  @include screen-xs-max {
+    margin: 0 0.5rem;
+    width: calc(100vw - 1rem);
+  }
 }
 
 .no-results {
-	font-weight: 500;
+  font-weight: 500;
 }
 
 .list {
-	display: flex;
-	flex-direction: column;
-	row-gap: 4px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 4px;
 }
 
 .result {
-	display: flex;
-	gap: 0.5rem;
-	align-items: center;
-	cursor: pointer;
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  cursor: pointer;
 
-	font-weight: 500;
+  font-weight: 500;
 
-
-	svg {
-		width: 1.25rem;
-		height: 1.25rem;
-	}
+  svg {
+    width: 1.25rem;
+    height: 1.25rem;
+  }
 }
