--- a/src/components/screens/home/Hero/Hero.module.scss
+++ b/src/components/screens/home/Hero/Hero.module.scss
@@ -1,92 +1,97 @@
 @import '@/styles/mixins.scss';
 
 .hero {
-	display: flex;
-	gap:1.25rem;
+  display: flex;
+  gap: 1.25rem;
 
-	@include screen-lg-max {
-		flex-direction: column;
-	}
+  @include screen-lg-max {
+    flex-direction: column;
+    gap: 3rem;
+  }
 }
 
 .left-side {
-	 flex:639;
+  flex: 639;
 
-	 display: flex;
-	 flex-direction: column;
-	 align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .right-side {
-	flex: 588;
+  flex: 588;
+  display: flex;
+  justify-content: center;
 }
 
-
 .title {
-	display: flex;
-	flex-direction: column;
-	width:100%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 
-	max-width: 40rem;
-	margin-bottom: 2.625rem;
+  max-width: 40rem;
+  margin-bottom: 2.625rem;
 
+  @include screen-md-min {
+    @include adaptive-value('font-size', 48, 20);
+  }
 
-	@include adaptive-value('font-size',48, 24);
-	font-weight: 600;
-	line-height: 122.916667%; 
-	letter-spacing: 2px;
-	text-align: left;
-	text-transform: uppercase;
+  @include screen-md-max {
+    @include adaptive-value('font-size', 48, 24);
+  }
+  font-weight: 600;
+  line-height: 122.916667%;
+  letter-spacing: 2px;
+  text-align: left;
+  text-transform: uppercase;
 
-	color: rgb(34, 34, 34);
+  color: rgb(34, 34, 34);
 
-	@include adaptive-value('gap',26, 12);
-	> span:first-child {
+  @include adaptive-value('gap', 26, 12);
+  > span:first-child {
+    > span {
+      color: rgb(149, 7, 7);
+    }
+  }
 
-		> span {
-			color: rgb(149, 7, 7);
-		}
-	}
-
-	> span:last-child {
-		text-align: right;
-	}
-
+  > span:last-child {
+    text-align: right;
+  }
 }
 
 .text {
-	color: rgb(76, 76, 76);
-	font-family: Montserrat;
-	@include adaptive-value('font-size',24, 16);
-	font-weight: 400;
-	line-height: 116.666667%; /* 28/24 */
-	letter-spacing: 1.6px;
-	text-align: left;
-	margin-bottom: 3.25rem;
+  color: rgb(76, 76, 76);
+  font-family: Montserrat;
+  @include adaptive-value('font-size', 24, 16);
+  font-weight: 400;
+  line-height: 116.666667%; /* 28/24 */
+  letter-spacing: 1.6px;
+  text-align: left;
+  margin-bottom: 5rem;
 }
 
 .button {
-	display: flex;
-	align-items: center;
-	&__inner {
-		display: flex;
-		color: rgb(34, 34, 34);
-		gap: 0.25rem;
-		font-family: Montserrat;
-		@include adaptive-value('font-size',24, 16);
-		font-weight: 500;
-		line-height: 116.666667%; /* 28/24 */
-		letter-spacing: 0px;
-		text-align: left;
+  display: flex;
+  align-items: center;
+  &__inner {
+    color: rgb(34, 34, 34);
+    gap: 0.25rem;
+    font-family: Montserrat;
+    @include adaptive-value('font-size', 24, 16);
+    font-weight: 500;
+    line-height: 116.666667%; /* 28/24 */
+    letter-spacing: 0px;
+    text-align: left;
 
-		> svg {
-			width: 2.625rem;
-			transition: scale .3s ease-in-out;
-		}
-	}
-	&:hover {
-		 svg {
-			scale: 1.1;
-		}
-	}
+    > svg {
+      fill: rgb(34, 34, 34);
+      transition: all 0.3s ease-in-out;
+    }
+  }
+  &:hover {
+    svg {
+      scale: 1.1;
+      fill: rgb(149, 7, 7);
+    }
+  }
 }
