--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,44 +1,63 @@
-* {
-	margin: 0;
-	padding: 0;
-	border: 0;
+*,
+*::after,
+*::before {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
 }
 
-* ,*::after, *::before {
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
+:focus,
+:active {
+  outline: none;
 }
 
-:focus,:active {outline: none;}
-a:focus, a:active{outline: none;}
-
-nav,footer, header, aside{display: block;}
-
-html, body {
-	height: 100%;
-	width: 100%;
-	font-size: 100%;
-	-ms-text-size-adjust: 100%;
-	-moz-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
+nav,
+footer,
+header,
+aside {
+  display: block;
 }
 
-input ,button , textarea {font-family: inherit;}
+html,
+body {
+  height: 100%;
+  width: 100%;
+  font-size: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
 
-input::-ms-clear{display: none;}
-button{cursor: pointer;}
+input,
+button,
+textarea {
+  font-family: inherit;
+}
+
+input::-ms-clear {
+  display: none;
+}
 button {
-	padding: 0;
-	border: 0;
-	background-color: transparent;
+  cursor: pointer;
+}
+button {
+  background-color: transparent;
 }
 
-a, a:visited{text-decoration: none;}
-a:hover {text-decoration: none;}
-ul {
-	padding: 0;
-	margin: 0;
+a,
+a:visited {
+  text-decoration: none;
 }
-ul li {list-style: none;}
-img{vertical-align: top;}
+a:hover {
+  text-decoration: none;
+}
+
+ul li {
+  list-style: none;
+}
+img {
+  vertical-align: top;
+}
