--- a/src/components/screens/home/ImageSlider/ImageSlider.module.scss
+++ b/src/components/screens/home/ImageSlider/ImageSlider.module.scss
@@ -15,6 +15,7 @@
     flex-direction: column;
     align-items: center;
   }
+
 }
 
 .slide {
@@ -22,7 +23,7 @@
     position: relative;
     max-width: 21rem;
     height: 100%;
-    
+
     @include screen-md-max {
       aspect-ratio: 336 / 471;
       width: 100%;
@@ -36,6 +37,7 @@
       display: none;
     }
   }
+
 }
 
 .right {
@@ -57,5 +59,15 @@
     align-items: center;
     justify-content: center;
     padding: 1.25rem 0.625rem;
+    svg {
+      transition: all 0.3s ease-in-out;
+    }
+
+    &:hover {
+      svg {
+        scale: 1.1;
+        fill: rgb(149, 7, 7);
+      }
+    }
   }
 }
