Main changes based on review(except the slider animation)

--- a/src/components/screens/home/ImageSlider/ImageSlider.module.scss
+++ b/src/components/screens/home/ImageSlider/ImageSlider.module.scss
@@ -1,8 +1,9 @@
 @import '@/styles/mixins.scss';
 
 .wrapper {
-  gap: 1rem;
+  gap: 0.75rem;
   max-width: 36.75rem;
+  max-height: 29.4375rem;
   width: 100%;
 
   @include screen-md-min {
@@ -15,16 +16,20 @@
     flex-direction: column;
     align-items: center;
   }
-
 }
 
 .slide {
   &__current {
     position: relative;
-    max-width: 21rem;
-    height: 100%;
+
+    @include screen-md-min {
+      width: 21rem;
+      height: 29.4375rem;
+    }
 
     @include screen-md-max {
+      max-width: 21rem;
+      max-height: 29.4375rem;
       aspect-ratio: 336 / 471;
       width: 100%;
     }
@@ -32,18 +37,21 @@
   &__next {
     position: relative;
     aspect-ratio: 240 / 333;
+    width: 15rem;
+    height: 20.8125rem;
+    
 
     @include screen-md-max {
       display: none;
     }
   }
-
 }
 
 .right {
   max-width: 15rem;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 
   @include screen-md-min {
     gap: 3.5rem;
@@ -53,12 +61,13 @@
 .buttons {
   width: 100%;
   display: flex;
+  margin-bottom: 2.625rem;
   > button {
     flex: 1;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 1.25rem 0.625rem;
+    padding: 0.5rem 0.625rem;
     svg {
       transition: all 0.3s ease-in-out;
     }
