--- a/src/components/screens/home/Hero/Hero.module.scss
+++ b/src/components/screens/home/Hero/Hero.module.scss
@@ -29,6 +29,7 @@
   flex-direction: column;
   width: 100%;
 
+  font-family: Montserrat, sans-serif;
   max-width: 40rem;
   margin-bottom: 2.625rem;
 
@@ -61,7 +62,7 @@
 
 .text {
   color: rgb(76, 76, 76);
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   @include adaptive-value('font-size', 24, 16);
   font-weight: 400;
   line-height: 116.666667%; /* 28/24 */
@@ -76,12 +77,11 @@
   &__inner {
     color: rgb(34, 34, 34);
     gap: 0.25rem;
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     @include adaptive-value('font-size', 24, 16);
     font-weight: 500;
     line-height: 116.666667%; /* 28/24 */
-    letter-spacing: 0px;
-    text-align: left;
+    letter-spacing: 0px;  
 
     > svg {
       fill: rgb(34, 34, 34);
