--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -12,8 +12,7 @@ body {
 }
 
 main {
-  padding: 128px 96px 0;
-  max-width: 1440px;
+  max-width: #{$maxWidth + px};
   min-height: 50%;
   margin: 0 auto;
 }
@@ -96,9 +95,8 @@ main {
   }
 }
 
-
-main { 
+.page__container {
   padding: 128px 96px 0;
-  @include adaptive-value('padding-left',96, 12); 
-  @include adaptive-value('padding-right',96, 12); 
+  @include adaptive-value('padding-left', 96, 12);
+  @include adaptive-value('padding-right', 96, 12);
 }
