--- a/src/components/screens/home/ImageSlider/ImageSlider.module.scss
+++ b/src/components/screens/home/ImageSlider/ImageSlider.module.scss
@@ -19,30 +19,47 @@
 }
 
 .slide {
-  &__current {
+  &-current {
     position: relative;
-
     @include screen-md-min {
       width: 21rem;
       height: 29.4375rem;
     }
-
     @include screen-md-max {
       max-width: 21rem;
       max-height: 29.4375rem;
       aspect-ratio: 336 / 471;
       width: 100%;
     }
-  }
-  &__next {
-    position: relative;
-    aspect-ratio: 240 / 333;
-    width: 15rem;
-    height: 20.8125rem;
-    
 
+    &__image {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+
+      @include screen-md-max {
+        max-width: 21rem;
+        max-height: 29.4375rem;
+        aspect-ratio: 336 / 471;
+        width: 100%;
+      }
+    }
+  }
+
+  &-next {
+    height: 20.8125rem;
+    width: 15rem;
+    position: relative;
     @include screen-md-max {
       display: none;
+    }
+    &__img {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      aspect-ratio: 240 / 333;
+      object-fit: contain;
     }
   }
 }
