--- a/src/components/common/LinkWithCircle/LinkWithCircle.module.scss
+++ b/src/components/common/LinkWithCircle/LinkWithCircle.module.scss
@@ -1,5 +1,5 @@
 .button {
-	background-color: white;
+	background-color: var(--background);
 
 	position: relative;
 	z-index: 3;
@@ -22,7 +22,7 @@
 	}
 
 	span {
-		background-color: white;
+		background-color: var(--background);
 		height: 3.75rem;
 		display: flex;
 		transition: all .3s ease-in-out;
