--- a/src/components/common/Footer/Footer.module.scss
+++ b/src/components/common/Footer/Footer.module.scss
@@ -105,7 +105,7 @@
   height: 48px;
   font-weight: 500;
   border: 0.5px solid #767676;
-  background-color: white;
+  background-color: var(--background);
 
   transition: color var(--transition-time-quick);
 
