Categories:sidebar has been done

--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -2,65 +2,65 @@
 @import '@/styles/variables.scss';
 
 .header {
-	@apply w-full flex gap-2 items-center  fixed top-0 bg-background z-50;
-	@include adaptive-value('padding-bottom', 40, 20);
-	@include adaptive-value('padding-top', 40, 20);
-	@include adaptive-value('padding-left', 32, 12);
-	@include adaptive-value('padding-right', 32, 12);
+  @apply w-full flex gap-2 items-center  fixed top-0 bg-background z-50;
+  @include adaptive-value('padding-bottom', 40, 20);
+  @include adaptive-value('padding-top', 40, 20);
+  @include adaptive-value('padding-left', 32, 12);
+  @include adaptive-value('padding-right', 32, 12);
 }
 
 .link {
-	color: #222222;
-	transition: all 0.3s ease-in-out;
+  color: var(--text-color);
+  transition: all 0.3s ease-in-out;
 
-	&:hover {
-		color: black;
-	}
+  &:hover {
+    color: black;
+  }
 }
 
 .logo {
-	@include adaptive-value('margin-right', 60, 0, 1200, 3);
+  @include adaptive-value('margin-right', 60, 0, 1200, 3);
 
-	@include screen-md-max {
-		display: none;
-	}
+  @include screen-md-max {
+    display: none;
+  }
 
-	@media screen and (min-width: $screen-md-min) and (max-width: $screen-xl-max) {
-		margin-right: auto;
-	}
+  @media screen and (min-width: $screen-md-min) and (max-width: $screen-xl-max) {
+    margin-right: auto;
+  }
 }
 
 .navbar {
-	flex: 6;
-	@include screen-xl-max {
-		display: none;
-	}
+  flex: 6;
+  @include screen-xl-max {
+    display: none;
+  }
 }
 
 .right-side {
-	@apply flex justify-end gap-2;
-	flex: 4;
-	@media screen and (max-width: $screen-xs-max) and (min-width: $screen-xl-min) {
-		flex: 1;
-	}
+  @apply flex justify-end gap-2;
+  flex: 4;
+  @media screen and (max-width: $screen-xs-max) and (min-width: $screen-xl-min) {
+    flex: 1;
+  }
 
-	> div:first-child {
-		margin-right: auto;
-		@media screen and (min-width: $screen-md-min) and (max-width: $screen-xl-max) {
-			margin-right: 0;
-		}
-	}
+  > div:first-child {
+    margin-right: auto;
+    @media screen and (min-width: $screen-md-min) and (max-width: $screen-xl-max) {
+      margin-right: 0;
+    }
+  }
 
-	&__links {
-		@apply flex items-center gap-2;
-	}
+  &__links {
+    @apply flex items-center gap-2;
+  }
 }
 
 .mobile-navbar {
-	@include screen-xl-min {
-		display: none;
-	}
-	@include screen-md-max {
-		flex: 10;
-	}
+  @include screen-xl-min {
+    display: none;
+  }
+  @include screen-md-max {
+    flex: 10;
+  }
 }
