--- a/src/components/common/Header/components/SearchBarMobile/SearchBarMobile.module.scss
+++ b/src/components/common/Header/components/SearchBarMobile/SearchBarMobile.module.scss
@@ -8,7 +8,7 @@
 	height: 100%;
 	display: flex;
 	align-items: center;
-	background-color: white;
+	background-color: var(--background);
 }
 
 .trigger {
