--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -22,6 +22,7 @@ main {
 @layer base {
   :root {
     --red-color: #950707;
+    --text-color: #222222 ;
 
     --background: rgb(250, 250, 250);
     --foreground: 240 10% 3.9%;
