--- a/src/components/screens/home/Hero/Hero.module.scss
+++ b/src/components/screens/home/Hero/Hero.module.scss
@@ -46,7 +46,7 @@
   text-align: left;
   text-transform: uppercase;
 
-  color: rgb(34, 34, 34);
+  color: var(--text-color);
 
   @include adaptive-value('gap', 26, 12);
   > span:first-child {
@@ -75,16 +75,16 @@
   display: flex;
   align-items: center;
   &__inner {
-    color: rgb(34, 34, 34);
+    color: var(--text-color);
     gap: 0.25rem;
     font-family: Montserrat, sans-serif;
     @include adaptive-value('font-size', 24, 16);
     font-weight: 500;
     line-height: 116.666667%; /* 28/24 */
-    letter-spacing: 0px;  
+    letter-spacing: 0px;
 
     > svg {
-      fill: rgb(34, 34, 34);
+      fill: var(--text-color);
       transition: all 0.3s ease-in-out;
     }
   }
