--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -23,6 +23,7 @@ main {
   :root {
     --red-color: #950707;
     --text-color: #222222 ;
+    --white-color: rgb(250, 250, 250);
 
     --background: rgb(250, 250, 250);
     --foreground: 240 10% 3.9%;
