Some general fixes and AuthContext have been done

--- a/src/components/common/Header/components/SearchBarMobile/SearchBarMobile.module.scss
+++ b/src/components/common/Header/components/SearchBarMobile/SearchBarMobile.module.scss
@@ -38,6 +38,7 @@
 	font-size: 1rem;
 	padding: 2px 0;
 	font-weight: 500;
+	background-color: var(--background);
 	&::placeholder {
 		color: #cbcbcb;
 	}
