--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -3,10 +3,14 @@
 
 .header {
   @apply w-full flex gap-2 items-center  fixed top-0 bg-background z-[100];
-  @include adaptive-value('padding-bottom', 20, 20);
-  @include adaptive-value('padding-top', 60, 20);
-  @include adaptive-value('padding-left', 32, 12);
-  @include adaptive-value('padding-right', 32, 12);
+  @include adaptive-value('padding-bottom', 20, 10);
+  @include adaptive-value('padding-top', 60, 30);
+  @include adaptive-value('padding-left', 60, 12);
+  @include adaptive-value('padding-right', 60, 12);
+
+  max-width: #{$maxWidth + px};
+  left: 50%;
+  translate: -50% 0;
 }
 
 .link {
@@ -25,14 +29,15 @@
     display: none;
   }
 
-  @media screen and (min-width: $screen-md-min) and (max-width: $screen-xl-max) {
+  @media screen and ($screen-md-min <= width < $screen-2xl) {
     margin-right: auto;
   }
 }
 
 .navbar {
   flex: 6;
-  @include screen-xl-max {
+
+  @include screen-2xl-max {
     display: none;
   }
 }
@@ -40,13 +45,13 @@
 .right-side {
   @apply flex justify-end gap-2;
   flex: 4;
-  @media screen and (max-width: $screen-xs-max) and (min-width: $screen-xl-min) {
+  @media screen and ($screen-md-min <= width < $screen-2xl) {
     flex: 1;
   }
 
   > div:first-child {
     margin-right: auto;
-    @media screen and (min-width: $screen-md-min) and (max-width: $screen-xl-max) {
+    @media screen and ($screen-md-min <= width < $screen-2xl) {
       margin-right: 0;
     }
   }
@@ -57,7 +62,7 @@
 }
 
 .mobile-navbar {
-  @include screen-xl-min {
+  @include screen-2xl-min {
     display: none;
   }
   @include screen-md-max {
