--- a/src/components/screens/home/CategoryPreview/CategoryPreview.module.scss
+++ b/src/components/screens/home/CategoryPreview/CategoryPreview.module.scss
@@ -69,6 +69,7 @@
 
       display: flex;
       justify-content: space-between;
+      align-items: center;
 
       &.active {
         color: var(--text-color);
