--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -21,9 +21,20 @@ main {
 
 @layer base {
   :root {
-    --red-color: #950707;
-    --text-color: #222222;
+    --red-color: #950707; // rgb(149, 7, 7)
+    --text-color: #222222; // rgb(34,34,34)
     --white-color: rgb(250, 250, 250);
+
+    --secondary-500: rgb(34, 34, 34);
+    --secondary-400: rgb(76, 76, 76);
+    --secondary-300: rgb(118, 118, 118);
+    --secondary-200: rgb(161, 161, 161);
+
+    --primary-200: rgb(213, 156, 156);
+
+    --neutral-100: rgb(228, 228, 228);
+    --neutral-300: rgb(173, 173, 173);
+    --neutral-500: rgb(118, 118, 118);
 
     --background: rgb(250, 250, 250);
     --foreground: 240 10% 3.9%;
@@ -99,7 +110,7 @@ main {
   }
 }
 
-@layer  components {
+@layer components {
   .heading-1 {
     font-weight: 700;
     @include adaptive-value('font-size', 32, 28);
