--- a/src/app/[locale]/cart/page.module.scss
+++ b/src/app/[locale]/cart/page.module.scss
@@ -32,24 +32,18 @@
   }
   > div:nth-child(3) {
     grid-area: checkout;
+    @include screen-lg-max {
+      justify-self: center;
+    }
   }
-}
 
-.shipping {
-  padding: 2rem 1rem;
-  display: flex;
-  gap: 0.625rem;
-  align-items: center;
-  background: white;
-  height: min-content;
-  h4 {
-    @apply text-md font-inter font-semibold;
-    margin-bottom: 0.375rem;
-    color: var(--text-color);
+  @include screen-xl-max {
+    grid-template-columns: 620fr 395fr;
   }
-  p {
-    @apply text-sm font-inter;
-    color: var(--text-color);
+
+  @include screen-lg-max {
+    grid-template-areas: 'shipping' 'checkout' 'content';
+    grid-template-columns: none;
   }
 }
 
@@ -63,4 +57,22 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+}
+
+.empty {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2.5rem;
+  margin-top: 6.25rem;
+  > button {
+    max-width: 18.75rem;
+    width: 100%;
+  }
+  > h2 {
+    @apply text-2xl font-semibold font-montserrat text-center;
+    color: var(--text-color);
+  }
 }
