--- a/src/components/common/Card/Card.module.scss
+++ b/src/components/common/Card/Card.module.scss
@@ -13,6 +13,11 @@
       // scale: 1.1;
     }
 
+    &:hover svg.choosen {
+      fill: #950707;
+      // scale: 1.1;
+    }
+
     &:focus svg {
       scale: 1.1;
     }
@@ -51,37 +56,6 @@
   font-weight: 600;
 }
 
-.popup {
-  padding: 10px;
-  position: absolute;
-  top: 40px;
-  left: 30%;
-  width: 70%;
-  background-color: rgba(200, 230, 200, 0.3);
-  text-align: center;
-  z-index: 7;
-
-  & > button {
-    padding: 4px 8px;
-    border: 1px solid black;
-    border-radius: 8px;
-    background-color: rgba(240, 240, 240, 0.5);
-  }
-
-  & > button:last-child {
-    margin-left: 20px;
-  }
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 6;
-}
-
 .btns {
   margin-top: 22px;
   display: flex;
@@ -90,6 +64,7 @@
   & button {
     height: 56px;
     justify-content: space-between;
+
     font-weight: 600;
     font-size: 16px;
     line-height: calc(20 / 16);
@@ -102,7 +77,7 @@
 
     & svg {
       position: absolute;
-      right: 18px;
+      right: 12px;
     }
   }
   & > button:last-child {
